--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsunittesting",
+  "name": "livijukufrontApp",
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.2.0",
@@ -7,7 +7,8 @@
     "es5-shim": "~3.1.0",
     "bootstrap-sass-official": "~3.2.0",
     "angular-route": "~1.2.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "angular-bootstrap": "~0.11.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
