--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "bootstrap-sass-official": "~3.2.0",
     "angular-route": "~1.2.0",
     "lodash": "~2.4.1",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "angular-ui-grid": "~3.0.0-rc.16"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
