--- a/bower.json
+++ b/bower.json
@@ -5,11 +5,11 @@
     "angular": "~1.2.0",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "bootstrap-sass-official": "~3.2.0",
     "angular-route": "~1.2.0",
     "lodash": "~2.4.1",
     "angular-bootstrap": "~0.12.0",
-    "angular-ui-grid": "~3.0.0-rc.16"
+    "angular-ui-grid": "~3.0.0-rc.16",
+    "bootstrap-sass-official": "~3.3.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
