--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,10 @@
     "lodash": "~2.4.1",
     "angular-bootstrap": "~0.12.0",
     "angular-ui-grid": "~3.0.0-rc.16",
-    "bootstrap-sass-official": "~3.3.1"
+    "bootstrap-sass-official": "~3.3.1",
+    "ng-file-upload": "~2.0.2",
+    "ng-file-upload-shim": "~2.0.2",
+    "angular-elastic": "~2.4.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
