--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "bootstrap-sass-official": "~3.3.1",
     "ng-file-upload": "~2.0.2",
     "ng-file-upload-shim": "~2.0.2",
-    "angular-elastic": "~2.4.2"
+    "angular-elastic": "~2.4.2",
+    "angular-resource": "~1.3.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
