--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,8 @@
     "angular-mocks": "~1.2.0",
     "angular-scenario": "~1.2.0"
   },
-  "appPath": "app"
+  "appPath": "app",
+  "resolutions": {
+    "angular": "~1.2.0"
+  }
 }
