--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "jsunittesting",
+  "name": "livijukufrontApp",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "imagemin-jpegtran": "^4.0.0",
+    "imagemin-optipng": "^4.0.0",
+    "imagemin-pngquant": "^4.0.0"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.6",
