--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "livijukufrontApp",
   "version": "0.0.0",
   "dependencies": {
-    "imagemin-jpegtran": "^4.0.0",
-    "imagemin-optipng": "^4.0.0",
-    "imagemin-pngquant": "^4.0.0"
+    "imagemin-jpegtran": "^1.0.0",
+    "imagemin-optipng": "^1.0.0",
+    "imagemin-pngquant": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -31,6 +31,7 @@
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
+    "imagemin-gifsicle": "^4.0.0",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.23",
     "karma-chrome-launcher": "^0.1.4",
