--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "livijukufrontApp",
   "version": "0.0.0",
-  "dependencies": {
-    "imagemin-jpegtran": "^1.0.0",
-    "imagemin-optipng": "^1.0.0",
-    "imagemin-pngquant": "^1.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.6",
@@ -32,6 +28,9 @@
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
     "imagemin-gifsicle": "^4.0.0",
+    "imagemin-jpegtran": "^4.0.0",
+    "imagemin-optipng": "^4.0.0",
+    "imagemin-pngquant": "^4.0.0",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.23",
     "karma-chrome-launcher": "^0.1.4",
