--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "grunt-karma": "^0.9.0",
     "grunt-newer": "^0.7.0",
     "grunt-ng-annotate": "^0.3.2",
+    "grunt-protractor-runner": "^1.1.4",
+    "grunt-protractor-webdriver": "^0.2.0",
     "grunt-sass": "^0.16.1",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
@@ -37,12 +39,14 @@
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.2.2",
     "load-grunt-tasks": "^0.4.0",
+    "protractor": "^1.5.0",
     "time-grunt": "^0.3.2"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "install": "node ./node_modules/protractor/bin/webdriver-manager update"
   }
 }
