--- a/bower.json
+++ b/bower.json
@@ -5,15 +5,19 @@
     "angular": "~1.2.0",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "angular-route": "~1.2.0",
     "lodash": "~2.4.1",
     "angular-bootstrap": "~0.12.0",
     "bootstrap-sass-official": "~3.3.1",
     "ng-file-upload": "~2.0.2",
     "ng-file-upload-shim": "~2.0.2",
     "angular-elastic": "~2.4.2",
-    "angular-resource": "~1.3.5",
-    "angular-smart-table": "~1.4.5"
+    "angular-animate": "1.2.28",
+    "angular-mocks": "1.2.28",
+    "angular-route": "1.2.28",
+    "angular-scenario": "1.2.28",
+    "angular-smart-table": "~1.4.6",
+    "angular-resource": "1.2.28",
+    "angular-toastr": "0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
