--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-scenario": "1.2.28",
     "angular-smart-table": "~1.4.6",
     "angular-resource": "1.2.28",
-    "angular-toastr": "0.4.2"
+    "angular-toastr": "0.4.2",
+    "angular-bootstrap-show-errors": "~2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
