--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-smart-table": "~1.4.6",
     "angular-resource": "1.2.28",
     "angular-toastr": "0.4.2",
-    "angular-bootstrap-show-errors": "~2.1.0"
+    "angular-bootstrap-show-errors": "~2.1.0",
+    "angular-ui-utils": "bower-validate"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
