--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,10 @@
     "angular-resource": "1.2.28",
     "angular-toastr": "0.4.2",
     "angular-bootstrap-show-errors": "~2.1.0",
-    "angular-ui-utils": "bower-validate"
+    "angular-ui-utils": "bower-validate",
+    "bower": "*",
+    "angular-i18n": "~1.3.9",
+    "ng-currency": "~0.7.10"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
