--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "livijukufrontApp",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.2.0",
+    "angular": "1.3.9",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
     "lodash": "~2.4.1",
@@ -11,25 +11,25 @@
     "ng-file-upload": "~2.0.2",
     "ng-file-upload-shim": "~2.0.2",
     "angular-elastic": "~2.4.2",
-    "angular-animate": "1.2.28",
-    "angular-mocks": "1.2.28",
-    "angular-route": "1.2.28",
-    "angular-scenario": "1.2.28",
+    "angular-animate": "1.3.9",
+    "angular-mocks": "1.3.9",
+    "angular-route": "1.3.9",
+    "angular-scenario": "1.3.9",
     "angular-smart-table": "~1.4.6",
-    "angular-resource": "1.2.28",
-    "angular-toastr": "0.4.2",
+    "angular-resource": "1.3.9",
+    "angular-toastr": "0.5.2",
     "angular-bootstrap-show-errors": "~2.1.0",
     "angular-ui-utils": "bower-validate",
     "bower": "*",
     "angular-i18n": "~1.3.9",
-    "ng-currency": "~0.7.10"
+    "ng-currency": "0.7.10"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.0",
-    "angular-scenario": "~1.2.0"
+    "angular-mocks": "1.3.9",
+    "angular-scenario": "1.3.9"
   },
   "appPath": "app",
   "resolutions": {
-    "angular": "~1.2.0"
+    "angular": "1.3.9"
   }
 }
