--- a/package.json
+++ b/package.json
@@ -20,26 +20,27 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^0.2.1",
     "grunt-google-cdn": "^0.4.0",
-    "grunt-karma": "^0.9.0",
+    "grunt-karma": "^0.10.1",
     "grunt-newer": "^0.7.0",
     "grunt-ng-annotate": "^0.3.2",
-    "grunt-protractor-runner": "^1.1.4",
+    "grunt-protractor-runner": "^1.2.1",
     "grunt-protractor-webdriver": "^0.2.0",
     "grunt-sass": "^0.16.1",
     "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.1.1",
-    "grunt-wiredep": "^1.7.0",
+    "grunt-usemin": "^2.6.2",
+    "grunt-wiredep": "^1.9.0",
     "imagemin-gifsicle": "^4.0.0",
     "imagemin-jpegtran": "^4.0.0",
     "imagemin-optipng": "^4.0.0",
     "imagemin-pngquant": "^4.0.0",
+    "jasmine-core": "^2.1.3",
     "jshint-stylish": "^0.2.0",
-    "karma": "^0.12.23",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-jasmine": "^0.2.2",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-jasmine": "^0.3.5",
     "load-grunt-tasks": "^0.4.0",
-    "protractor": "^1.5.0",
+    "protractor": "^1.6.1",
     "time-grunt": "^0.3.2"
   },
   "engines": {
