--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,6 @@
     "lodash": "~2.4.1",
     "angular-bootstrap": "~0.12.0",
     "bootstrap-sass-official": "~3.3.1",
-    "ng-file-upload": "~2.0.2",
-    "ng-file-upload-shim": "~2.0.2",
     "angular-elastic": "~2.4.2",
     "angular-animate": "1.3.9",
     "angular-mocks": "1.3.9",
@@ -22,7 +20,9 @@
     "angular-ui-utils": "bower-validate",
     "bower": "*",
     "angular-i18n": "~1.3.9",
-    "ng-currency": "0.7.10"
+    "ng-currency": "0.7.10",
+    "ng-file-upload": "~2.1.1",
+    "ng-file-upload-shim": "~2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.3.9",
