--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
+    "express": "^4.11.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.6",
     "grunt-concurrent": "^0.5.0",
@@ -48,6 +49,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "install": "node ./node_modules/protractor/bin/webdriver-manager update"
+    "install": "node ./node_modules/protractor/bin/webdriver-manager update",
+    "serve-dist": "node ./serve-dist.js"
   }
 }
