--- a/bower.json
+++ b/bower.json
@@ -31,5 +31,10 @@
   "appPath": "app",
   "resolutions": {
     "angular": "1.3.9"
+  },
+  "overrides": {
+    "angular-i18n": {
+      "main": "angular-locale_fi-fi.js"
+    }
   }
 }
