--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {},
   "devDependencies": {
     "express": "^4.11.1",
+    "express-http-proxy": "^0.3.0",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.6",
     "grunt-concurrent": "^0.5.0",
