--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
+*.out
+.idea
 .idea
 .sass-cache
 .tmp
-bower_components
-dist
-node_modules
-.idea
 app/_pgbackup
 app/pinegrow.json
+bower_components
 build-job-target
+dist
+node_modules
 target
-*.out
+upstream
