--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,8 @@
     "bower": "*",
     "angular-i18n": "~1.3.9",
     "ng-currency": "0.7.10",
-    "ng-file-upload": "~2.1.1",
-    "ng-file-upload-shim": "~2.1.1"
+    "ng-file-upload": "3.0.4",
+    "ng-file-upload-shim": "3.0.4"
   },
   "devDependencies": {
     "angular-mocks": "1.3.9",
