--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .sass-cache
 .tmp
 app/_pgbackup
-app/buildversion.txt
+app/buildversion.html
 app/pinegrow.json
 bower_components
 build-job-target
