--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-i18n": "~1.3.9",
     "ng-currency": "0.7.10",
     "ng-file-upload": "3.0.4",
-    "ng-file-upload-shim": "3.0.4"
+    "ng-file-upload-shim": "3.0.4",
+    "angular-loading-bar": "~0.7.1"
   },
   "devDependencies": {
     "angular-mocks": "1.3.9",
