--- a/bower.json
+++ b/bower.json
@@ -21,9 +21,9 @@
     "bower": "*",
     "angular-i18n": "~1.3.9",
     "ng-currency": "0.7.10",
-    "ng-file-upload": "3.0.4",
-    "ng-file-upload-shim": "3.0.4",
-    "angular-loading-bar": "~0.7.1"
+    "angular-loading-bar": "~0.7.1",
+    "ng-file-upload": "~4.0.3",
+    "ng-file-upload-shim": "~4.0.3"
   },
   "devDependencies": {
     "angular-mocks": "1.3.9",
