--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
+    "bower": "^1.4.1",
     "express": "^4.11.1",
     "express-cache-response-directive": "^0.2.0",
     "express-http-proxy": "^0.3.0",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.6",
     "grunt-concurrent": "^0.5.0",
-    "grunt-connect-proxy": "^0.1.11",
+    "grunt-connect-proxy": "^0.2",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-concat": "^0.4.0",
@@ -58,6 +59,8 @@
     "teste2e": "grunt teste2e",
     "citeste2e": "grunt citeste2e",
     "serve": "grunt serve",
-    "serve-dist": "node ./serve-dist.js"
+    "serve-dist": "node ./serve-dist.js",
+    "prepublish": "bower install",
+    "start": "grunt serve"
   }
 }
