--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "ng-currency": "0.7.10",
     "angular-loading-bar": "~0.7.1",
     "ng-file-upload": "~4.0.4",
-    "ng-file-upload-shim": "~4.0.4"
+    "ng-file-upload-shim": "~4.0.4",
+    "bootstrap": "~3.3.4"
   },
   "devDependencies": {
     "angular-mocks": "1.3.9",
