--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browser-sync": "^1.9.2",
     "browserify": "^9.0.8",
     "debowerify": "^1.2.1",
+    "event-stream": "^3.3.0",
     "express": "^4.11.1",
     "express-cache-response-directive": "^0.2.0",
     "express-http-proxy": "^0.3.0",
