--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "grunt-usemin": "^2.6.2",
     "grunt-wiredep": "^1.9.0",
     "gulp": "^3.8.11",
+    "gulp-replace": "^0.5.3",
+    "gulp-rev": "^3.0.1",
     "gulp-streamify": "0.0.5",
     "gulp-stylus": "^2.0.1",
     "gulp-uglify": "^1.2.0",
@@ -56,6 +58,7 @@
     "karma-jasmine": "^0.3.5",
     "load-grunt-tasks": "^0.4.0",
     "protractor": "^1.6.1",
+    "rimraf": "^2.3.3",
     "time-grunt": "^0.3.2",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.0"
