--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt-usemin": "^2.6.2",
     "grunt-wiredep": "^1.9.0",
     "gulp": "^3.8.11",
+    "gulp-protractor": "^1.0.0",
     "gulp-replace": "^0.5.3",
     "gulp-rev": "^3.0.1",
     "gulp-streamify": "0.0.5",
@@ -53,7 +54,9 @@
     "jasmine-reporters": "^2.0.4",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.31",
+    "karma-browserify": "^4.1.2",
     "karma-chrome-launcher": "^0.1.7",
+    "karma-cli": "0.0.4",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.5",
     "load-grunt-tasks": "^0.4.0",
