--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt-usemin": "^2.6.2",
     "grunt-wiredep": "^1.9.0",
     "gulp": "^3.8.11",
+    "gulp-ng-annotate": "^0.5.3",
     "gulp-protractor": "^1.0.0",
     "gulp-replace": "^0.5.3",
     "gulp-rev": "^3.0.1",
