--- a/package.json
+++ b/package.json
@@ -11,32 +11,6 @@
     "express": "^4.11.1",
     "express-cache-response-directive": "^0.2.0",
     "express-http-proxy": "^0.3.0",
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^0.7.6",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-connect-proxy": "^0.2",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-compass": "^0.7.2",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.9.2",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-filerev": "^0.2.1",
-    "grunt-google-cdn": "^0.4.0",
-    "grunt-karma": "^0.10.1",
-    "grunt-newer": "^0.7.0",
-    "grunt-ng-annotate": "^0.3.2",
-    "grunt-protractor-runner": "^1.2.1",
-    "grunt-protractor-webdriver": "^0.2.0",
-    "grunt-sass": "^0.16.1",
-    "grunt-svgmin": "^0.4.0",
-    "grunt-usemin": "^2.6.2",
-    "grunt-wiredep": "^1.9.0",
     "gulp": "^3.8.11",
     "gulp-ng-annotate": "^0.5.3",
     "gulp-protractor": "^1.0.0",
@@ -73,15 +47,14 @@
   "scripts": {
     "install": "node ./node_modules/protractor/bin/webdriver-manager update",
     "build": "NODE_ENV=production gulp build",
-    "build-dev": "grunt build-dev",
-    "build-dist": "grunt build",
-    "test": "grunt test",
-    "teste2e": "grunt teste2e",
-    "citeste2e": "grunt citeste2e",
-    "serve": "grunt serve",
+    "build-dev": "gulp build",
+    "build-dist": "npm run build",
+    "test": "karma start test/karma.conf.js",
+    "teste2e": "gulp e2e",
+    "serve": "gulp server",
     "serve-dist": "node ./serve-dist.js",
     "prepublish": "bower install",
-    "start": "grunt serve"
+    "start": "gulp"
   },
   "browserify": {
     "transform": [
