--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,7 @@
   },
   "appPath": "app",
   "resolutions": {
-    "angular": "1.3.9"
+    "angular": "^1.3.9"
   },
   "overrides": {
     "angular-i18n": {
