--- a/bower.json
+++ b/bower.json
@@ -4,27 +4,27 @@
   "dependencies": {
     "angular": "1.3.9",
     "json3": "~3.3.1",
-    "es5-shim": "~3.1.0",
     "lodash": "~3.7.0",
-    "angular-bootstrap": "~0.12.0",
     "bootstrap-sass-official": "~3.3.1",
     "angular-elastic": "~2.4.2",
     "angular-animate": "1.3.9",
     "angular-mocks": "1.3.9",
     "angular-route": "1.3.9",
     "angular-scenario": "1.3.9",
-    "angular-smart-table": "~1.4.6",
     "angular-resource": "1.3.9",
-    "angular-toastr": "0.5.2",
-    "angular-bootstrap-show-errors": "~2.1.0",
     "angular-ui-utils": "bower-validate",
     "bower": "*",
     "angular-i18n": "~1.3.9",
-    "ng-currency": "0.7.10",
     "angular-loading-bar": "~0.7.1",
-    "ng-file-upload": "~4.0.4",
-    "ng-file-upload-shim": "~4.0.4",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "angular-bootstrap": "~0.13.0",
+    "angular-bootstrap-show-errors": "~2.3.0",
+    "angular-smart-table": "~2.0.3",
+    "angular-toastr": "~1.3.1",
+    "ng-currency": "~0.8.5",
+    "ng-file-upload": "~4.2.1",
+    "ng-file-upload-shim": "~4.2.1",
+    "es5-shim": "~4.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.3.9",
