--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "install": "node ./node_modules/protractor/bin/webdriver-manager update",
     "build": "gulp build",
     "build-dev": "gulp build",
     "build-dist": "npm run build",
@@ -53,7 +52,7 @@
     "teste2e": "gulp e2e",
     "citeste2e": "gulp e2e-no-selenium-server",
     "serve": "gulp server",
-    "prepublish": "bower install",
+    "prepublish": "bower install && node ./node_modules/protractor/bin/webdriver-manager update",
     "start": "gulp"
   },
   "browser": {
