--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "teste2e": "gulp e2e",
     "citeste2e": "gulp e2e-no-selenium-server",
     "serve": "gulp server",
-    "prepublish": "bower install && node ./node_modules/protractor/bin/webdriver-manager update",
+    "prepublish": "bower install && webdriver-manager update",
     "start": "gulp"
   },
   "browser": {
