--- a/livijuku-front-e2e-tests/pom.xml
+++ b/livijuku-front-e2e-tests/pom.xml
@@ -22,6 +22,18 @@
           <target>1.7</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18.1</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>citestng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+          <parallel>methods</parallel>
+          <threadCount>1</threadCount>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
