--- a/livijuku-front-e2e-tests/pom.xml
+++ b/livijuku-front-e2e-tests/pom.xml
@@ -28,7 +28,7 @@
         <version>2.18.1</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>citestng.xml</suiteXmlFile>
+            <suiteXmlFile>ci-suite.xml</suiteXmlFile>
           </suiteXmlFiles>
           <parallel>methods</parallel>
           <threadCount>1</threadCount>
