--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "build": "gulp build",
-    "build-dev": "gulp build",
+    "build": "./node_modules/bin/gulp build",
+    "build-dev": "./node_modules/bin/gulp build",
     "build-dist": "npm run build",
     "test": "karma start test/karma.conf.js",
     "teste2e": "gulp e2e",
