--- a/package.json
+++ b/package.json
@@ -1,9 +1,29 @@
 {
   "name": "livijukufrontApp",
   "version": "1.0.0-SNAPSHOT",
-  "dependencies": {},
+  "dependencies": {
+    "angular": "1.3.10",
+    "angular-animate": "1.3.10",
+    "angular-bootstrap": "^0.12.0",
+    "angular-bootstrap-show-errors": "~2.3.0",
+    "angular-elastic": "^2.3.5",
+    "angular-i18n": "~1.3.10",
+    "angular-loading-bar": "~0.7.1",
+    "angular-resource": "1.3.10",
+    "angular-route": "1.3.10",
+    "angular-smart-table": "^2.0.2",
+    "angular-toastr": "~1.3.1",
+    "bootstrap": "~3.3.4",
+    "es5-shim": "~4.1.1",
+    "jquery": "^2.1.4",
+    "json3": "~3.3.1",
+    "lodash": "~3.7.0",
+    "ng-file-upload": "~4.2.1"
+  },
   "devDependencies": {
     "bower": "^1.4.1",
+    "angular-mocks": "1.3.10",
+    "angular-scenario": "1.3.10",
     "browser-sync": "^2.7.1",
     "browserify": "^9.0.8",
     "browserify-shim": "^3.8.6",
