--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "ng-file-upload": "~4.2.1"
   },
   "devDependencies": {
-    "bower": "^1.4.1",
     "angular-mocks": "1.3.10",
     "angular-scenario": "1.3.10",
+    "babelify": "^6.1.2",
+    "bower": "^1.4.1",
     "browser-sync": "^2.7.1",
     "browserify": "^9.0.8",
     "browserify-shim": "^3.8.6",
@@ -83,6 +84,7 @@
   },
   "browserify": {
     "transform": [
+      "babelify",
       "debowerify",
       "stringify",
       "browserify-shim"
