--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-cache-response-directive": "^0.2.0",
     "express-http-proxy": "^0.3.0",
     "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-ng-annotate": "^0.5.3",
     "gulp-protractor": "^1.0.0",
     "gulp-replace": "^0.5.3",
