--- a/livijuku-front-e2e-tests/pom.xml
+++ b/livijuku-front-e2e-tests/pom.xml
@@ -77,6 +77,11 @@
       <artifactId>httpclient</artifactId>
       <version>4.4.1</version>
     </dependency>
+      <dependency>
+          <groupId>org.apache.pdfbox</groupId>
+          <artifactId>pdfbox</artifactId>
+          <version>1.8.8</version>
+      </dependency>
   </dependencies>
 
 </project>
