--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "angular-route": "1.3.10",
     "angular-smart-table": "^2.0.2",
     "angular-toastr": "~1.3.1",
-    "angular-ui-utils": "0.1.1",
+    "angular-ui-validate": "1.0.0",
     "bootstrap": "~3.3.4",
     "es5-shim": "~4.1.1",
     "jquery": "^2.1.4",
