--- a/package.json
+++ b/package.json
@@ -51,12 +51,7 @@
     "jasmine-core": "^2.1.3",
     "jasmine-reporters": "^2.0.4",
     "jshint-stylish": "^0.2.0",
-    "karma": "^0.12.31",
-    "karma-browserify": "^4.1.2",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-cli": "0.0.4",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-jasmine": "^0.3.5",
+    "mocha": "^2.2.5",
     "rimraf": "^2.3.3",
     "stringify": "^3.1.0",
     "vinyl-source-stream": "^1.1.0",
@@ -69,7 +64,7 @@
     "build": "gulp build",
     "build-dev": "gulp build",
     "build-dist": "npm run build",
-    "test": "karma start test/karma.conf.js",
+    "test": "./test-unit.sh",
     "teste2e": "gulp e2e",
     "citeste2e": "gulp e2e-no-selenium-server",
     "serve": "gulp server",
