--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "teste2e": "gulp e2e",
     "citeste2e": "gulp e2e-no-selenium-server",
     "serve": "gulp server",
-    "prepublish": "bower install && webdriver-manager update",
+    "prepublish": "bower install",
     "start": "./start-dev.sh"
   },
   "browser": {
