--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
     "jquery": "^2.1.4",
     "json3": "~3.3.1",
     "lodash": "~3.7.0",
+    "ng-currency": "solita/ng-currency",
     "ng-file-upload": "~4.2.1"
   },
   "devDependencies": {
     "angular-mocks": "1.3.10",
     "angular-scenario": "1.3.10",
     "babelify": "^6.1.2",
-    "bower": "^1.4.1",
     "browser-sync": "^2.7.1",
     "browserify": "^9.0.8",
     "browserify-shim": "^3.8.6",
-    "debowerify": "^1.2.1",
     "event-stream": "^3.3.0",
     "express": "^4.11.1",
     "express-cache-response-directive": "^0.2.0",
@@ -69,11 +68,10 @@
     "teste2e": "gulp e2e",
     "citeste2e": "gulp e2e-no-selenium-server",
     "serve": "gulp server",
-    "prepublish": "bower install",
     "start": "./start-dev.sh"
   },
   "browser": {
-    "angular": "./bower_components/angular/angular.js"
+    "angular": "./node_modules/angular/angular.js"
   },
   "browserify-shim": {
     "angular": "angular"
@@ -81,7 +79,6 @@
   "browserify": {
     "transform": [
       "babelify",
-      "debowerify",
       "stringify",
       "browserify-shim"
     ]
