--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "json3": "~3.3.1",
     "lodash": "~3.7.0",
     "ng-currency": "solita/ng-currency#v0.8.x",
-    "ng-file-upload": "~4.2.1"
+    "ng-file-upload": "^5.0.9"
   },
   "devDependencies": {
     "angular-mocks": "1.3.10",
