--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "livijukufrontApp",
   "version": "1.1.0-SNAPSHOT",
   "dependencies": {
-    "angular": "1.3.10",
+    "angular": "^1.3.14",
     "angular-animate": "1.3.10",
     "angular-bootstrap": "^0.12.0",
     "angular-bootstrap-show-errors": "~2.3.0",
@@ -23,7 +23,7 @@
     "ng-file-upload": "^5.0.9"
   },
   "devDependencies": {
-    "angular-mocks": "1.3.10",
+    "angular-mocks": "^1.4.1",
     "angular-scenario": "1.3.10",
     "babelify": "^6.1.2",
     "browser-sync": "^2.7.1",
@@ -50,6 +50,7 @@
     "imagemin-pngquant": "^4.0.0",
     "jasmine-core": "^2.1.3",
     "jasmine-reporters": "^2.0.4",
+    "jsdom": "^3.0.3",
     "jshint-stylish": "^0.2.0",
     "mocha": "^2.2.5",
     "rimraf": "^2.3.3",
