--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "livijukufrontApp",
   "version": "1.1.0-SNAPSHOT",
   "dependencies": {
-    "angular": "^1.3.14",
-    "angular-animate": "1.3.10",
+    "angular": "~1.3.0",
+    "angular-animate": "~1.3.0",
     "angular-bootstrap": "^0.12.0",
     "angular-bootstrap-show-errors": "~2.3.0",
     "angular-elastic": "^2.3.5",
-    "angular-i18n": "~1.3.10",
+    "angular-i18n": "~1.3.0",
     "angular-loading-bar": "~0.7.1",
-    "angular-resource": "1.3.10",
-    "angular-route": "1.3.10",
+    "angular-resource": "~1.3.0",
+    "angular-route": "~1.3.0",
     "angular-smart-table": "^2.0.2",
     "angular-toastr": "~1.3.1",
     "angular-ui-validate": "1.0.0",
@@ -23,12 +23,11 @@
     "ng-file-upload": "^5.0.9"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.1",
+    "angular-mocks": "~1.3.0",
     "angular-scenario": "1.3.10",
     "babelify": "^6.1.2",
     "browser-sync": "^2.7.1",
     "browserify": "^9.0.8",
-    "browserify-shim": "^3.8.6",
     "event-stream": "^3.3.0",
     "express": "^4.11.1",
     "express-cache-response-directive": "^0.2.0",
@@ -71,17 +70,10 @@
     "serve": "gulp server",
     "start": "./start-dev.sh"
   },
-  "browser": {
-    "angular": "./node_modules/angular/angular.js"
-  },
-  "browserify-shim": {
-    "angular": "angular"
-  },
   "browserify": {
     "transform": [
       "babelify",
-      "stringify",
-      "browserify-shim"
+      "stringify"
     ]
   }
 }
