--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular-route": "~1.4.2",
     "angular-smart-table": "^2.0.2",
     "angular-toastr": "~1.4.1",
+    "angular-ui-grid": "^3.0.0-rc.22",
     "angular-ui-validate": "1.0.0",
     "bootstrap": "~3.3.4",
     "es5-shim": "~4.1.1",
