--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "livijukufrontApp",
   "version": "1.1.0-SNAPSHOT",
   "dependencies": {
-    "angular": "~1.4.2",
-    "angular-animate": "~1.4.2",
+    "angular": "~1.3.17",
+    "angular-animate": "~1.3.17",
     "angular-bootstrap": "^0.12.0",
     "angular-bootstrap-show-errors": "~2.3.0",
     "angular-elastic": "^2.3.5",
-    "angular-i18n": "~1.4.2",
+    "angular-i18n": "~1.3.17",
     "angular-loading-bar": "~0.7.1",
-    "angular-resource": "~1.4.2",
-    "angular-route": "~1.4.2",
+    "angular-resource": "~1.3.17",
+    "angular-route": "~1.3.17",
     "angular-smart-table": "^2.0.2",
-    "angular-toastr": "~1.4.1",
-    "angular-ui-grid": "^3.0.0-rc.22",
+    "angular-toastr": "~1.3.1",
+    "angular-ui-grid": "^3.0.1",
     "angular-ui-validate": "1.0.0",
     "bootstrap": "~3.3.4",
     "es5-shim": "~4.1.1",
@@ -24,8 +24,8 @@
     "ng-file-upload": "^5.0.9"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.2",
-    "angular-scenario": "1.4.2",
+    "angular-mocks": "~1.3.17",
+    "angular-scenario": "1.3.17",
     "babelify": "^6.1.2",
     "browser-sync": "^2.7.1",
     "browserify": "^9.0.8",
