--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "angular-elastic": "^2.3.5",
     "angular-i18n": "~1.4.3",
     "angular-loading-bar": "~0.7.1",
+    "angular-nvd3": "^1.0.0-beta",
     "angular-resource": "~1.4.3",
     "angular-route": "~1.4.3",
     "angular-smart-table": "^2.0.2",
@@ -16,6 +17,7 @@
     "angular-ui-grid": "^3.0.1",
     "angular-ui-validate": "1.0.0",
     "bootstrap": "~3.3.4",
+    "d3": "^3.5.6",
     "es5-shim": "~4.1.1",
     "jquery": "^2.1.4",
     "json3": "~3.3.1",
