--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jsdom": "^3.0.3",
     "jshint-stylish": "^0.2.0",
     "mocha": "^2.2.5",
+    "node-notifier": "^4.2.3",
     "rimraf": "^2.3.3",
     "stringify": "^3.1.0",
     "vinyl-source-stream": "^1.1.0",
