--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "angular-animate": "~1.4.3",
     "angular-bootstrap": "^0.12.0",
     "angular-bootstrap-show-errors": "~2.3.0",
-    "angular-elastic": "^2.3.5",
+    "angular-elastic": "^2.5.0",
     "angular-i18n": "~1.4.3",
-    "angular-loading-bar": "~0.7.1",
+    "angular-loading-bar": "^0.8.0",
     "angular-nvd3": "^1.0.0-beta",
     "angular-resource": "~1.4.3",
     "angular-route": "~1.4.3",
@@ -22,7 +22,7 @@
     "es5-shim": "~4.1.1",
     "jquery": "^2.1.4",
     "json3": "~3.3.1",
-    "lodash": "~3.7.0",
+    "lodash": "^3.10.1",
     "ng-currency": "solita/ng-currency#v0.8.x",
     "ng-file-upload": "^5.0.9"
   },
