--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular-ui-grid": "^3.0.1",
     "angular-ui-router": "^0.2.15",
     "angular-ui-validate": "1.0.0",
+    "angular-xeditable": "vitalets/angular-xeditable",
     "bootstrap": "~3.3.4",
     "d3": "^3.5.6",
     "es5-shim": "~4.1.1",
