--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "angular": "~1.4.3",
     "angular-animate": "~1.4.3",
-    "angular-bootstrap": "^0.12.0",
+    "angular-bootstrap": "0.12.2",
     "angular-bootstrap-show-errors": "~2.3.0",
     "angular-elastic": "^2.5.0",
     "angular-i18n": "~1.4.3",
