LIVIJUKU-417:YM Irroitettu pdf.js projekti livijuku-frontista. - Artifaktit saadaan jenkins.livijuku.solita.fi:lta, jolla manuaalisesti buildataan aina tarvittava pdf.js-projektin julkaisutägiin perustuva versio. - Lopputuloksena livijuku-front julkaisupaketti kasvoi noin kaksinkertaiseksi (~10Mt)

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,8 @@ target
 upstream
 rev-manifest.json
 *.log
-pdf.js
 livijuku-front-e2e-tests/target
 
 livijuku-front-e2e-tests/LivijukuE2e.iml
+
+generic.zip
