--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "jsdom": "^3.0.3",
     "jshint-stylish": "^0.2.0",
     "mocha": "^2.2.5",
+    "mocha-traceur": "^2.1.0",
     "node-notifier": "^4.2.3",
     "rimraf": "^2.3.3",
     "stringify": "^3.1.0",
