--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "angular": "~1.4.3",
     "angular-animate": "~1.4.3",
-    "angular-bootstrap": "0.12.2",
     "angular-bootstrap-show-errors": "~2.3.0",
     "angular-elastic": "^2.5.0",
     "angular-i18n": "~1.4.3",
@@ -14,6 +13,7 @@
     "angular-route": "~1.4.3",
     "angular-smart-table": "^2.1.1",
     "angular-toastr": "~1.4.1",
+    "angular-ui-bootstrap": "^0.13.4",
     "angular-ui-grid": "^3.0.1",
     "angular-ui-router": "^0.2.15",
     "angular-ui-validate": "1.0.0",
