--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-http-proxy": "^0.3.0",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-inject": "^3.0.0",
     "gulp-ng-annotate": "^0.5.3",
     "gulp-replace": "^0.5.3",
     "gulp-rev": "^3.0.1",
@@ -61,6 +62,7 @@
     "mocha-traceur": "^2.1.0",
     "node-notifier": "^4.2.3",
     "rimraf": "^2.3.3",
+    "run-sequence": "^1.1.4",
     "stringify": "^3.1.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.0"
