config service fix

--- a/package.json
+++ b/package.json
@@ -81,7 +81,9 @@
   },
   "browserify": {
     "transform": [
-      "babelify",
+      ["babelify", {
+        "optional": ["utility.inlineEnvironmentVariables"]
+      }],
       "stringify"
     ]
   }
