--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
     "angular-smart-table": "^2.1.1",
     "angular-toastr": "~1.4.1",
     "angular-ui-bootstrap": "^0.13.4",
-    "angular-ui-grid": "^3.0.1",
     "angular-ui-router": "^0.2.15",
     "angular-ui-validate": "1.0.0",
-    "angular-xeditable": "vitalets/angular-xeditable",
     "bluebird": "^2.9.34",
     "bootstrap": "~3.3.4",
     "d3": "^3.5.6",
@@ -81,9 +79,14 @@
   },
   "browserify": {
     "transform": [
-      ["babelify", {
-        "optional": ["utility.inlineEnvironmentVariables"]
-      }],
+      [
+        "babelify",
+        {
+          "optional": [
+            "utility.inlineEnvironmentVariables"
+          ]
+        }
+      ],
       "stringify"
     ]
   }
