--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "livijukufrontApp",
-  "version": "1.1.0-SNAPSHOT",
+  "version": "1.2.0",
   "dependencies": {
     "angular": "~1.4.3",
     "angular-animate": "~1.4.3",
