--- a/package.json
+++ b/package.json
@@ -48,16 +48,13 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
     "http-proxy": "^1.11.1",
-    "imagemin-gifsicle": "^4.0.0",
-    "imagemin-jpegtran": "^4.0.0",
-    "imagemin-optipng": "^4.0.0",
-    "imagemin-pngquant": "^4.0.0",
     "jasmine-core": "^2.1.3",
     "jasmine-reporters": "^2.0.4",
     "jsdom": "^3.0.3",
     "jshint-stylish": "^0.2.0",
     "mocha": "^2.2.5",
     "mocha-traceur": "^2.1.0",
+    "traceur": "0.0.92",
     "node-notifier": "^4.2.3",
     "rimraf": "^2.3.3",
     "stringify": "^3.1.0",
