--- a/package.json
+++ b/package.json
@@ -2,29 +2,29 @@
   "name": "livijukufrontApp",
   "version": "1.3.0-SNAPSHOT",
   "dependencies": {
-    "angular": "~1.4.3",
-    "angular-animate": "~1.4.3",
+    "angular": "^1.4.7",
+    "angular-animate": "^1.4.7",
     "angular-bootstrap-show-errors": "~2.3.0",
     "angular-elastic": "^2.5.0",
-    "angular-i18n": "~1.4.3",
+    "angular-i18n": "^1.4.7",
     "angular-loading-bar": "^0.8.0",
-    "angular-nvd3": "^1.0.0-beta",
-    "angular-resource": "~1.4.3",
-    "angular-route": "~1.4.3",
-    "angular-smart-table": "^2.1.1",
-    "angular-toastr": "~1.4.1",
-    "angular-ui-bootstrap": "^0.13.4",
+    "angular-nvd3": "^1.0.2",
+    "angular-resource": "^1.4.7",
+    "angular-route": "^1.4.7",
+    "angular-smart-table": "^2.1.4",
+    "angular-toastr": "^1.5.0",
+    "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
-    "angular-ui-validate": "1.0.0",
+    "angular-ui-validate": "^1.2.1",
     "bluebird": "^2.9.34",
-    "bootstrap": "~3.3.4",
+    "bootstrap": "^3.3.5",
     "d3": "^3.5.6",
-    "es5-shim": "~4.1.1",
+    "es5-shim": "^4.2.0",
     "jquery": "^2.1.4",
-    "json3": "~3.3.1",
+    "json3": "^3.3.2",
     "lodash": "^3.10.1",
     "ng-currency": "solita/ng-currency#v0.8.x",
-    "ng-file-upload": "^7.3.4"
+    "ng-file-upload": "^9.1.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.3",
