--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "angular-elastic": "^2.5.0",
     "angular-i18n": "^1.4.7",
     "angular-loading-bar": "^0.8.0",
-    "angular-nvd3": "^1.0.3",
+    "angular-nvd3": "1.0.2",
     "angular-resource": "^1.4.7",
     "angular-route": "^1.4.7",
     "angular-smart-table": "^2.1.4",
