--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "bootstrap": "^3.3.5",
     "d3": "3.5.6",
     "es5-shim": "^4.2.0",
+    "gulp-stylus": "^2.1.0",
     "jquery": "^2.1.4",
+    "jsdom": "^6.5.1",
     "json3": "^3.3.2",
     "lodash": "^3.10.1",
     "ng-currency": "solita/ng-currency#v0.8.x",
