LIVIJUKU-575: Front kehitystyökalujen päivitys

--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "bootstrap": "^3.3.5",
     "d3": "3.5.6",
     "es5-shim": "^4.2.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-stylus": "^2.1.0",
     "jquery": "^2.1.4",
-    "jsdom": "^6.5.1",
+    "jsdom": "^3.1.2",
     "json3": "^3.3.2",
     "lodash": "^3.10.1",
     "ng-currency": "solita/ng-currency#v0.8.x",
