--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular-nvd3": "1.0.2",
     "angular-resource": "^1.4.7",
     "angular-route": "^1.4.7",
+    "angular-sanitize": "^1.4.8",
     "angular-smart-table": "^2.1.4",
     "angular-toastr": "^1.5.0",
     "angular-ui-bootstrap": "^0.14.3",
@@ -23,6 +24,7 @@
     "jquery": "^2.1.4",
     "jsdom": "^7.0.2",
     "lodash": "^3.10.1",
+    "ng-csv": "^0.3.6",
     "ng-currency": "solita/ng-currency#v0.8.x",
     "ng-file-upload": "^8.0.6"
   },
