--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lodash": "^3.10.1",
     "ng-csv": "^0.3.6",
     "ng-currency": "solita/ng-currency#v0.8.x",
-    "ng-file-upload": "^8.0.6"
+    "ng-file-upload": "^8.0.6",
+    "nvd3": "^1.8.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.3",
