--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^3.3.5",
     "d3": "3.5.6",
     "es5-shim": "^4.2.0",
+    "iban": "0.0.6",
     "jquery": "^2.1.4",
     "jsdom": "^7.0.2",
     "lodash": "^3.10.1",
