LIVIJUKU-1054 - tests for float directive + update mocha

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "browser-sync": "^2.11.1",
     "browserify": "^13.0.0",
     "debug": "2.6.1",
+    "esm": "^3.2.25",
     "event-stream": "^3.3.2",
     "express": "^4.13.4",
     "express-cache-response-directive": "^1.0.0",
@@ -63,8 +64,7 @@
     "jasmine-reporters": "^2.1.1",
     "jshint-stylish": "^2.1.0",
     "json3": "^3.3.2",
-    "mocha": "^2.4.5",
-    "mocha-traceur": "^2.1.0",
+    "mocha": "^6.1.4",
     "node-notifier": "^4.5.0",
     "rimraf": "^2.5.2",
     "stringify": "^4.0.1",
